# seichiassist-downloader

./: .gitignore  Dockerfile  README.md  rust-toolchain.toml
.github/workflows/: build-and-release.yml  ci.yml  typespec-compile-and-deploy-gh-pages.yml
api/: README.md  main.tsp  package-lock.json  package.json
server/: Cargo.toml
server/src/: main.rs
