[package]
name = "seichiassist-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
# default featureは推移的にnative-tls featureを有効しているため、native-tls (LinuxではOpenSSL) を連れてくる。これをオプトアウトするためにrustlsを使う。
sentry = { version = "0.32.2", default-features = false, features = ["backtrace", "contexts", "panic", "anyhow", "reqwest", "tracing", "debug-images", "rustls", "tower", "tower-http"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["std", "registry", "env-filter"] }
tower = "0.4.13"
envy = "0.4.2"
once_cell = "1.19.0"
serde_json = "1.0.115"
